WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181113
[WinCairo] fix build after
r226245
https://bugs.webkit.org/show_bug.cgi?id=181113
Summary
[WinCairo] fix build after r226245
Christopher Reid
Reported
2017-12-21 17:55:10 PST
c:\webkit-buildslave\win-cairo-release\build\source\webcore\html\AttachmentTypes.h(42): error C2039: 'optional': is not a member of 'std'
https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/9487/steps/compile-webkit/logs/stdio
Attachments
Patch
(993 bytes, patch)
2017-12-21 18:01 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Christopher Reid
Comment 1
2017-12-21 18:01:08 PST
Created
attachment 330087
[details]
Patch
Don Olmstead
Comment 2
2017-12-21 18:04:12 PST
This error seems to have been triggered by the unified sources build. In the changeset that caused the failure some files were moved which looks to have changed the group of source files. It looks like previously whatever sources were included before had included <wtf/Optional.h> so there were no build errors. More stuff like this is likely to happen with the unified builds so we should probably look at how to prevent this from happening.
WebKit Commit Bot
Comment 3
2017-12-21 19:34:31 PST
Comment on
attachment 330087
[details]
Patch Clearing flags on attachment: 330087 Committed
r226256
: <
https://trac.webkit.org/changeset/226256
>
WebKit Commit Bot
Comment 4
2017-12-21 19:34:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-12-21 19:35:21 PST
<
rdar://problem/36190022
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug