[WinCairo] fix build after r226245 https://bugs.webkit.org/show_bug.cgi?id=181113

Unreviewed build fix.

No new tests, no change in behavior.

Patch by Christopher Reid <chris.reid@sony.com> on 2017-12-21

* html/AttachmentTypes.h: Added an include for std::optional

Canonical link: https://commits.webkit.org/196980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226256 268f45cc-cd09-0410-ab3c-d52691b4dbfc